# foundation-ai-platform

./: .env.example  .gitignore  BREV_SETUP.md  Dockerfile.vllm  Makefile  README.md  ask_qwen.py  docker-compose.yml  lifecycyle.md  pyproject.toml  test_docker_manager.py  work_done.md
alembic/: README.md  env.py
alembic/versions/: 0001_initial_schema.py
configs/: README.md  platform.yaml  vllm_config.yaml
configs/capabilities/: capabilities.yaml
configs/deployments/: default.yaml  placement_profiles.yaml
configs/lifecycle/: policies.yaml
configs/models/: catalog.yaml  qwen3_1_7b.yaml
configs/routing/: routes.yaml
configs/telemetry/: telemetry.yaml
demo/: README.md  plot_metrics.py  poisson_load_test.py
deployment/: Dockerfile.gateway  README.md
docs/: 01_system_overview.md  02_project_structure.md  03_registry_design.md  04_plugin_architecture.md  05_serving_architecture.md  06_gateway_design.md  07_routing_design.md  08_lifecycle_design.md  09_telemetry_design.md  10_database_design.md  11_configuration_system.md  12_testing_strategy.md  13_security_guidelines.md  14_deployment_guide.md  15_future_agent_architecture.md  16_hosting_and_placements.md  README.md
llm_platform/: README.md  __init__.py  bootstrap.py
scripts/: README.md  benchmark_gemini.py  benchmark_latency.py  bootstrap.py  deploy_model.py  load_test.py  register_model.py  smoke_test_hosting.py  test_gemini_single.py  test_lifecycle_and_routing.py  test_live_server.py  validate_model.py
tests/: README.md  conftest.py
tests/e2e/: README.md  (+1 more)
web_ui/: app.js  index.html  style.css
(+96 files in other folders)
