[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foundation-ai-platform"
version = "0.1.0"
description = "Configuration-driven enterprise LLM platform skeleton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
]
inference = [
  "accelerate>=1.7.0,<2.0.0",
  "huggingface_hub>=0.34.0,<1.0.0",
  "safetensors>=0.4.0,<1.0.0",
  "sentencepiece>=0.2.0,<1.0.0",
  "torch>=2.8.0,<3.0.0",
  "transformers>=4.57.0,<5.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["llm_platform*"]
